Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.9.0
-
None
-
ghx-label-4
Description
test_failpoints.py triggered a failure in AggregationNode::Prepare() due to debug action. As a result, tuple_pool_ wasn't initialized but AggregationNode::Close() didn't check for it. It was implicitly relying on output_tuple_desc_ to be set in Prepare() as an indication which no longer works after recent change which initializes output_tuple_desc_ in the constructor.
Program terminated with signal 6, Aborted. #0 0x00007fdc357128e5 in raise () from /lib64/libc.so.6 To enable execution of this file add add-auto-load-safe-path /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/lib64/libstdc++.so.6.0.20-gdb.py line to your configuration file "/var/lib/jenkins/.gdbinit". To completely disable this security protection add set auto-load safe-path / line to your configuration file "/var/lib/jenkins/.gdbinit". For more information about this security protection see the "Auto-loading safe path" section in the GDB manual. E.g., run from the shell: info "(gdb)Auto-loading safe path" #0 0x00007fdc357128e5 in raise () from /lib64/libc.so.6 #1 0x00007fdc357140c5 in abort () from /lib64/libc.so.6 #2 0x00007fdc37a6bc55 in os::abort(bool) () from /opt/toolchain/sun-jdk-64bit-1.7.0.75/jre/lib/amd64/server/libjvm.so #3 0x00007fdc37bedcd7 in VMError::report_and_die() () from /opt/toolchain/sun-jdk-64bit-1.7.0.75/jre/lib/amd64/server/libjvm.so #4 0x00007fdc37a70b6f in JVM_handle_linux_signal () from /opt/toolchain/sun-jdk-64bit-1.7.0.75/jre/lib/amd64/server/libjvm.so #5 <signal handler called> #6 0x00000000013d73ac in impala::MemPool::Allocate<false> (this=0x0, size=8, alignment=8) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/mem-pool.h:246 #7 0x000000000145ddb8 in impala::MemPool::Allocate (this=0x0, size=8) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/mem-pool.h:102 #8 0x0000000001746fa5 in impala::Tuple::Create (size=8, pool=0x0) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/tuple.h:67 #9 0x00000000018e2e7d in impala::AggregationNode::Close (this=0xc10d840, state=0xbd15c00) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/exec/aggregation-node.cc:272 #10 0x0000000001489412 in impala::FragmentInstanceState::Close (this=0xf185400) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/fragment-instance-state.cc:306 #11 0x00000000014866f8 in impala::FragmentInstanceState::Exec (this=0xf185400) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/fragment-instance-state.cc:95 #12 0x000000000144db0e in impala::QueryState::ExecFInstance (this=0xa2c5800, fis=0xf185400) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/query-state.cc:329 #13 0x000000000144c820 in impala::QueryState::<lambda()>::operator()(void) const (__closure=0x7fdb5a468c28) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/query-state.cc:303 #14 0x000000000144e4eb in boost::detail::function::void_function_obj_invoker0<impala::QueryState::StartFInstances()::<lambda()>, void>::invoke(boost::detail::function::function_buffer &) (function_obj_ptr=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0-p2/include/boost/function/function_template.hpp:153 #15 0x00000000013ac5dc in boost::function0<void>::operator() (this=0x7fdb5a468c20) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0-p2/include/boost/function/function_template.hpp:767 #16 0x000000000167fc95 in impala::Thread::SuperviseThread (name=..., category=..., functor=..., thread_started=0x7fdb5d978c80) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/util/thread.cc:322 #17 0x0000000001688604 in boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> >::operator()<void (*)(const std::basic_string<char>&, const std::basic_string<char>&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(const std::basic_string<char, std::char_traits<char>, std::allocator<char> > &, const std::basic_string<char, std::char_traits<char>, std::allocator<char> > &, boost::function<void()>, impala::Promise<long> *), boost::_bi::list0 &, int) (this=0xab85fc0, f=@0xab85fb8, a=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0-p2/include/boost/bind/bind.hpp:457 #18 0x0000000001688547 in boost::_bi::bind_t<void, void (*)(const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > >::operator()(void) (this=0xab85fb8) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0-p2/include/boost/bind/bind_template.hpp:20 #19 0x000000000168850a in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > > >::run(void) (this=0xab85e00) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0-p2/include/boost/thread/detail/thread.hpp:116 #20 0x0000000001b6fb2a in thread_proxy () #21 0x00007fdc35a7a851 in start_thread () from /lib64/libpthread.so.0 #22 0x00007fdc357c894d in clone () from /lib64/libc.so.6
Attachments
Issue Links
- is broken by
-
IMPALA-4192 Pull all expressions in a fragment into QueryState
- Resolved