IMPALA-5551: Fix AggregationNode::Close() when Prepare() fails

A recent change moved the initialization of output_tuple_desc_
to the constructor of AggregationNode. This changes the order
in which tuple_pool_ and output_tuple_desc_ are initialized.
The code in AggregationNode::Close() made the assumption that
tuple_pool_ cannot be NULL (although without a DCHECK) if
output_tuple_desc_ is not NULL. This no longer holds in the
new code.

This change makes AggregationNode::Close() checks tuple_pool_
to see if it's NULL before using it.

Change-Id: Ia0f8cce7cf6e3183d3a5e145c2fcfa50f36c77e0
Reviewed-on: http://gerrit.cloudera.org:8080/7254
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins