be/src/exec/aggregation-node.cc
@@ -107,6 +107,7 @@ Status AggregationNode::Init(const TPlanNode& tnode, RuntimeState* state) {
 }
 
 Status AggregationNode::Prepare(RuntimeState* state) {
+  DCHECK(output_iterator_.AtEnd());
   SCOPED_TIMER(runtime_profile_->total_time_counter());
   RETURN_IF_ERROR(ExecNode::Prepare(state));
 
@@ -268,7 +269,8 @@ void AggregationNode::Close(RuntimeState* state) {
   // but we don't actually need the result, so allocate a single dummy tuple to avoid
   // accumulating memory.
   Tuple* dummy_dst = nullptr;
-  if (needs_finalize_ && output_tuple_desc_ != nullptr) {
+  // 'tuple_pool_' can be NULL if Prepare() failed.
+  if (needs_finalize_ && tuple_pool_.get() != nullptr) {
     dummy_dst = Tuple::Create(output_tuple_desc_->byte_size(), tuple_pool_.get());
   }
   while (!output_iterator_.AtEnd()) {
